// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When an element is hovered in visual editor mode HTML RTE field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode HTML RTE field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode HTML RTE field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode HTML RTE field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.rich_text_editor_multiple_"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.rich_text_editor_multiple_.0"
  />
  <p
    data-cslp="all_fields.bltapikey.en-us.rich_text_editor_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode HTML RTE field (multiple) should have outline on individual instances 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.rich_text_editor_multiple_.0"
/>
`;

exports[`When an element is hovered in visual editor mode HTML RTE field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode HTML RTE field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.rich_text_editor"
/>
`;

exports[`When an element is hovered in visual editor mode JSON RTE field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode JSON RTE field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode JSON RTE field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode JSON RTE field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.json_rich_text_editor_multiple_"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.json_rich_text_editor_multiple_.0"
  />
  <p
    data-cslp="all_fields.bltapikey.en-us.json_rich_text_editor_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode JSON RTE field (multiple) should have outline on individual instances 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.json_rich_text_editor_multiple_.0"
/>
`;

exports[`When an element is hovered in visual editor mode JSON RTE field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode JSON RTE field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.json_rte"
/>
`;

exports[`When an element is hovered in visual editor mode boolean field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode boolean field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.boolean"
/>
`;

exports[`When an element is hovered in visual editor mode date field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode date field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.date"
/>
`;

exports[`When an element is hovered in visual editor mode file field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode file field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode file field (multiple) should have custom cursor on the url 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode file field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode file field (multiple) should have instance button on individual instances on the url 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode file field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.file_multiple_"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.file_multiple_.0"
  />
  <p
    data-cslp="all_fields.bltapikey.en-us.file_multiple_.1"
  />
  <img
    data-cslp="all_fields.bltapikey.en-us.file_multiple_.0.url"
  />
  <img
    data-cslp="all_fields.bltapikey.en-us.file_multiple_.1.url"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode file field (multiple) should have outline on individual instances 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.file_multiple_.0"
/>
`;

exports[`When an element is hovered in visual editor mode file field (multiple) should have outline on the url 1`] = `
<img
  data-cslp="all_fields.bltapikey.en-us.file_multiple_.0.url"
/>
`;

exports[`When an element is hovered in visual editor mode file field should have a outline on the url as well 1`] = `
<img
  data-cslp="all_fields.bltapikey.en-us.file.url"
/>
`;

exports[`When an element is hovered in visual editor mode file field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode file field should have custom cursor on the url as well 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode file field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.file"
/>
`;

exports[`When an element is hovered in visual editor mode group field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode group field (multiple) should have custom cursor on the nested single line 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode group field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode group field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.group_multiple_"
>
  <div
    data-cslp="all_fields.bltapikey.en-us.group_multiple_.0"
  >
    <p
      data-cslp="all_fields.bltapikey.en-us.group_multiple_.0.multi_line"
    />
  </div>
  <div
    data-cslp="all_fields.bltapikey.en-us.group_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode group field (multiple) should have outline on the nested single line 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.group_multiple_.0.multi_line"
/>
`;

exports[`When an element is hovered in visual editor mode group field should have a outline on the nested single line 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.group.single_line"
/>
`;

exports[`When an element is hovered in visual editor mode group field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode group field should have custom cursor on the nested single line 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode group field should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.group"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.group.single_line"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode link field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode link field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode link field (multiple) should have instance button on individual instances 1`] = `NodeList []`;

exports[`When an element is hovered in visual editor mode link field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.link_multiple_"
>
  <a
    data-cslp="all_fields.blt366df6233d9915f5.en-us.link_multiple_.0.href"
  />
  <a
    data-cslp="all_fields.bltapikey.en-us.link_multiple_.1.href"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode link field (multiple) should have outline on individual instances 1`] = `
<a
  data-cslp="all_fields.blt366df6233d9915f5.en-us.link_multiple_.0.href"
/>
`;

exports[`When an element is hovered in visual editor mode link field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode link field should have outline 1`] = `
<a
  data-cslp="all_fields.bltapikey.en-us.link.href"
/>
`;

exports[`When an element is hovered in visual editor mode markdown field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode markdown field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode markdown field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode markdown field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.markdown_multiple_"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.markdown_multiple_.0"
  />
  <p
    data-cslp="all_fields.bltapikey.en-us.markdown_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode markdown field (multiple) should have outline on individual instances 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.markdown_multiple_.0"
/>
`;

exports[`When an element is hovered in visual editor mode markdown field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode markdown field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.markdown"
/>
`;

exports[`When an element is hovered in visual editor mode multi line field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode multi line field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode multi line field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode multi line field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.multi_line_textbox_multiple_"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.multi_line_textbox_multiple_.0"
  />
  <p
    data-cslp="all_fields.bltapikey.en-us.multi_line_textbox_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode multi line field (multiple) should have outline on individual instances 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.multi_line_textbox_multiple_.0"
/>
`;

exports[`When an element is hovered in visual editor mode multi line field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode multi line field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.multi_line"
/>
`;

exports[`When an element is hovered in visual editor mode number field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode number field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode number field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode number field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.number_multiple_"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.number_multiple_.0"
  />
  <p
    data-cslp="all_fields.bltapikey.en-us.number_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode number field (multiple) should have outline on individual instances 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.number_multiple_.0"
/>
`;

exports[`When an element is hovered in visual editor mode number field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode number field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.number"
/>
`;

exports[`When an element is hovered in visual editor mode reference field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode reference field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode reference field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode reference field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.reference_multiple_"
>
  <div
    data-cslp="all_fields.bltapikey.en-us.reference_multiple_.0"
  />
  <div
    data-cslp="all_fields.bltapikey.en-us.reference_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode reference field (multiple) should have outline on individual instances 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.reference_multiple_.0"
/>
`;

exports[`When an element is hovered in visual editor mode reference field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode reference field should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.reference"
/>
`;

exports[`When an element is hovered in visual editor mode select field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode select field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode select field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 64.88671875px; top: 51px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 64.88671875px; top: 71.3984375px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode select field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.select_multiple_"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.select_multiple_.0"
  />
  <p
    data-cslp="all_fields.bltapikey.en-us.select_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode select field (multiple) should have outline on individual instances 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.select_multiple_.0"
/>
`;

exports[`When an element is hovered in visual editor mode select field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode select field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.select"
/>
`;

exports[`When an element is hovered in visual editor mode single line field (multiple) should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode single line field (multiple) should have custom cursor on individual instances 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode single line field (multiple) should have instance button on individual instances 1`] = `
NodeList [
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 51px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
  <button
    class="visual-editor__add-button"
    data-testid="visual-editor-add-instance-button"
    style="left: 78.7734375px; top: 61.19921875px;"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      

      <path
        d="M10.4688 4.375C10.4688 4.11612 10.259 3.90625 10.0001 3.90625C9.74121 3.90625 9.53135 4.11612 9.53135 4.375V9.27307H4.37402C4.11514 9.27307 3.90527 9.48294 3.90527 9.74182C3.90527 10.0007 4.11514 10.2106 4.37402 10.2106H9.53135V15.625C9.53135 15.8839 9.74121 16.0937 10.0001 16.0937C10.259 16.0937 10.4688 15.8839 10.4688 15.625V10.2106H15.6259C15.8847 10.2106 16.0946 10.0007 16.0946 9.74182C16.0946 9.48294 15.8847 9.27307 15.6259 9.27307H10.4688V4.375Z"
        fill="#475161"
      />
      

    </svg>
  </button>,
]
`;

exports[`When an element is hovered in visual editor mode single line field (multiple) should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.single_line_textbox_multiple_"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.single_line_textbox_multiple_.0"
  />
  <p
    data-cslp="all_fields.bltapikey.en-us.single_line_textbox_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual editor mode single line field (multiple) should have outline on individual instances 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.single_line_textbox_multiple_.0"
/>
`;

exports[`When an element is hovered in visual editor mode single line field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode single line field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.single_line"
/>
`;

exports[`When an element is hovered in visual editor mode title field should have custom cursor 1`] = `
<div
  class="visual-editor__cursor visible"
  data-testid="visual-editor__cursor"
/>
`;

exports[`When an element is hovered in visual editor mode title field should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.title"
/>
`;
